plugins {
    id 'java'
}

group 'uwu.smsgamer'
version '0.4.0'

sourceCompatibility = '1.8'
targetCompatibility = '1.8'

subprojects {
    group = parent.group
    version = parent.version
}

repositories {
    mavenCentral()
}

dependencies {
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.0'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.0'
}
